[gd_scene load_steps=2 format=3 uid="uid://daefgk7kixe4k"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_bdxom"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_bdxom")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.0
offset_top = 556.0
offset_right = 199.0
offset_bottom = -245.0
grow_horizontal = 2
grow_vertical = 2

[node name="start_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_btn")
text = "Begin
"

[node name="setting_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_btn")
text = "Give Up"

[connection signal="pressed" from="VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/setting_btn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
